# game_of_life

./: .gitignore  Cargo.toml  game_of_life.sublime-project  opengl_test.sublime-project
shaders/: main.frag  main.fs  main.ply  main.vert  main.vs  proc_tex.fs  proc_tex.vs
src/: camera.rs  main.rs  objects.rs  transform.rs
src/shaders/: fragment.glsl  vertex.glsl
src/support/: mod.rs
