[package]
name = "opengl_test"
version = "0.1.0"
authors = ["Fallen_Angel_admin <suc.daniil@gmail.com>"]

[dependencies]
glium = "*"
genmesh = "*"
clock_ticks = "*"
obj = "*"
rand = "*"

[features]
default = ["glutin", "image", "nalgebra", "cgmath", "gl_read_buffer", "gl_depth_textures"]
gl_read_buffer = []
gl_uniform_blocks = []
gl_sync = []
gl_program_binary = []
gl_tessellation = []
gl_instancing = []
gl_integral_textures = []
gl_depth_textures = []
gl_stencil_textures = []
gl_texture_1d = []
gl_texture_3d = []
gl_texture_multisample = []
gl_texture_multisample_array = []
headless = []

[dependencies.glutin]
version = "0.1.6"
features = ["window"]
optional = true

[dependencies.cgmath]
version = "0.2.0"
optional = true

[dependencies.nalgebra]
version = "0.2.14"
optional = true

[dependencies.image]
version = "0.3.9"
optional = true

[dependencies]
lazy_static = "0.1"
gl_common = "0.0.4"
libc = "0.1"
smallvec = "0.1.4"

[build-dependencies]
gl_generator = "0.0.25"
khronos_api = "0.0.5"
